test/tasty/neg/src-2/TestDelayedFancyColours_fail.scala
package tastytest

object TestDelayedFancyColours {
  def foo(p: DelayedFancyColours.Pretty) = p match {
    case DelayedFancyColours.FancyColours.Colour.Violet => ()
  }
}
